--- a/paginas/admin/agregarProductos/agregarProductos.html
+++ b/paginas/admin/agregarProductos/agregarProductos.html
@@ -5,24 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Agregar</title>
-    <link rel="stylesheet" href="/reset.css">
-    <link rel="stylesheet" href="/estilosPrincipales.css">
-    <link rel="stylesheet" href="/estilos/cabecera.css">
-    <link rel="stylesheet" href="/paginas/admin/agregarProductos/estilosAgregarProductos.css">
-    <link rel="stylesheet" href="/estilos/piePagina.css">
+    <link rel="stylesheet" href="../../../reset.css">
+    <link rel="stylesheet" href="../../../estilosPrincipales.css">
+    <link rel="stylesheet" href="../../../estilos/cabecera.css">
+    <link rel="stylesheet" href="../../admin/agregarProductos/estilosAgregarProductos.css">
+    <link rel="stylesheet" href="../../../estilos/piePagina.css">
 </head>
 <body>
     <header>
         <section class="encabezado">
             <div class="logo">
-                <img src="/imagenes/Vector.png" alt="" srcset="" class="logo__imagen">
+                <img src="../../../imagenes/Vector.png" alt="" srcset="" class="logo__imagen">
                 <p class="logo__texto"><span>Alura</span>Geek</p>
             </div>
             <div class="barraBusqueda">
                 <input class="barraBusqueda__campo" type="search" name="" id="" placeholder="¿Qué deseas buscar?">
-                <input type="image" src="/imagenes/lupa.png" alt="lupa" >
+                <input type="image" src="../../../imagenes/lupa.png" alt="lupa" >
             </div>
-            <a href="/paginas/admin/productos/productos.html" class="encabezado__boton">Menú Administrador</a>
+            <a href="../productos/productos.html" class="encabezado__boton">Menú Administrador</a>
         </section>
     </header>
     <main>
@@ -53,7 +53,7 @@
     <footer>
         <section class="footer__datos">
             <div class="logo">
-                <img src="/imagenes/Vector.png" alt="" srcset="" class="logo__imagen">
+                <img src="../../../imagenes/Vector.png" alt="" srcset="" class="logo__imagen">
                 <p class="logo__texto"><span>Alura</span>Geek</p>
             </div>
             <ul class="footer__lista">
