--- a/paginas/admin/productos/productos.html
+++ b/paginas/admin/productos/productos.html
@@ -5,22 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Productos</title>
-    <link rel="stylesheet" href="/reset.css">
-    <link rel="stylesheet" href="/estilosPrincipales.css">
-    <link rel="stylesheet" href="/estilos/cabecera.css">
-    <link rel="stylesheet" href="/paginas/admin/productos/estilosProductos.css">
-    <link rel="stylesheet" href="/estilos/piePagina.css">
+    <link rel="stylesheet" href="../../../reset.css">
+    <link rel="stylesheet" href="../../../estilosPrincipales.css">
+    <link rel="stylesheet" href="../../../estilos/cabecera.css">
+    <link rel="stylesheet" href="../productos/estilosProductos.css">
+    <link rel="stylesheet" href="../../../estilos/piePagina.css">
 </head>
 <body>
     <header>
         <section class="encabezado">
             <div class="logo">
-                <img src="/imagenes/Vector.png" alt="" srcset="" class="logo__imagen">
+                <img src="../../../imagenes/Vector.png" alt="" srcset="" class="logo__imagen">
                 <p class="logo__texto"><span>Alura</span>Geek</p>
             </div>
             <div class="barraBusqueda">
                 <input class="barraBusqueda__campo" type="search" name="" id="" placeholder="¿Qué deseas buscar?">
-                <input type="image" src="/imagenes/lupa.png" alt="lupa" >
+                <input type="image" src="../../../imagenes/lupa.png" alt="lupa" >
             </div>
         </section>
     </header>
@@ -28,15 +28,15 @@
         <section>
             <div class="encabezado__seccion">
                 <h2 class="encabezado__seccion___titulo">Todos los productos</h2> 
-                <a href="/paginas/admin/agregarProductos/agregarProductos.html" class="encabezado__seccion___boton">Agregar producto</a> 
+                <a href="../../admin/agregarProductos/agregarProductos.html" class="encabezado__seccion___boton">Agregar producto</a> 
             </div>
             <ul class="tarjetas">
                 <li class="tarjeta">
                     <div class="container__imagen">
-                        <img src="/imagenes/starWars/img-stw1.png" alt="">
+                        <img src="../../../imagenes/starWars/img-stw1.png" alt="">
                         <div class="container__iconos">
-                            <a href="#"><img src="/imagenes/iconos/bote.png" alt="" class="iconos"></a>
-                            <a href="#"><img src="/imagenes/iconos/lapiz.png" alt="" class="iconos"></a>
+                            <a href="#"><img src="../../../imagenes/iconos/bote.png" alt="" class="iconos"></a>
+                            <a href="#"><img src="../../../imagenes/iconos/lapiz.png" alt="" class="iconos"></a>
                         </div>
                     </div>
                     <div class="tarjeta__container">
@@ -48,10 +48,10 @@
                 <li class="tarjeta">
                     <div class="tarjeta__imagen"></div>
                     <div class="container__imagen">
-                        <img src="/imagenes/starWars/img-stw2.png" alt="imagen2">
+                        <img src="../../../imagenes/starWars/img-stw2.png" alt="imagen2">
                         <div class="container__iconos">
-                            <a href="#"><img src="/imagenes/iconos/bote.png" alt="" class="iconos"></a>
-                            <a href="#"><img src="/imagenes/iconos/lapiz.png" alt="" class="iconos"></a>
+                            <a href="#"><img src="../../../imagenes/iconos/bote.png" alt="" class="iconos"></a>
+                            <a href="#"><img src="../../../imagenes/iconos/lapiz.png" alt="" class="iconos"></a>
                         </div>
                     </div>
                     <div class="tarjeta__container">
@@ -62,10 +62,10 @@
                 </li>
                 <li class="tarjeta">
                     <div class="container__imagen">
-                        <img src="/imagenes/starWars/img-stw3.png" alt="imagen3">
+                        <img src="../../../imagenes/starWars/img-stw3.png" alt="imagen3">
                         <div class="container__iconos">
-                            <a href="#"><img src="/imagenes/iconos/bote.png" alt="" class="iconos"></a>
-                            <a href="#"><img src="/imagenes/iconos/lapiz.png" alt="" class="iconos"></a>
+                            <a href="#"><img src="../../../imagenes/iconos/bote.png" alt="" class="iconos"></a>
+                            <a href="#"><img src="../../../imagenes/iconos/lapiz.png" alt="" class="iconos"></a>
                         </div>
                     </div>
                     <div class="tarjeta__container">
@@ -76,10 +76,10 @@
                 </li>
                 <li class="tarjeta">
                     <div class="container__imagen">
-                        <img src="/imagenes/starWars/img-stw4.png" alt="imagen4">
+                        <img src="../../../imagenes/starWars/img-stw4.png" alt="imagen4">
                         <div class="container__iconos">
-                            <a href="#"><img src="/imagenes/iconos/bote.png" alt="" class="iconos"></a>
-                            <a href="#"><img src="/imagenes/iconos/lapiz.png" alt="" class="iconos"></a>
+                            <a href="#"><img src="../../../imagenes/iconos/bote.png" alt="" class="iconos"></a>
+                            <a href="#"><img src="../../../imagenes/iconos/lapiz.png" alt="" class="iconos"></a>
                         </div>
                     </div>
                     <div class="tarjeta__container">
@@ -90,10 +90,10 @@
                 </li>
                 <li class="tarjeta">
                     <div class="container__imagen">
-                        <img src="/imagenes/starWars/img-stw5.png" alt="imagen5">
+                        <img src="../../../imagenes/starWars/img-stw5.png" alt="imagen5">
                         <div class="container__iconos">
-                            <a href="#"><img src="/imagenes/iconos/bote.png" alt="" class="iconos"></a>
-                            <a href="#"><img src="/imagenes/iconos/lapiz.png" alt="" class="iconos"></a>
+                            <a href="#"><img src="../../../imagenes/iconos/bote.png" alt="" class="iconos"></a>
+                            <a href="#"><img src="../../../imagenes/iconos/lapiz.png" alt="" class="iconos"></a>
                         </div>
                     </div>
                     <div class="tarjeta__container">
@@ -104,10 +104,10 @@
                 </li>
                 <li class="tarjeta">
                     <div class="container__imagen">
-                        <img src="/imagenes/starWars/img-stw6.png" alt="imagen6">
+                        <img src="../../../imagenes/starWars/img-stw6.png" alt="imagen6">
                         <div class="container__iconos">
-                            <a href="#"><img src="/imagenes/iconos/bote.png" alt="" class="iconos"></a>
-                            <a href="#"><img src="/imagenes/iconos/lapiz.png" alt="" class="iconos"></a>
+                            <a href="#"><img src="../../../imagenes/iconos/bote.png" alt="" class="iconos"></a>
+                            <a href="#"><img src="../../../imagenes/iconos/lapiz.png" alt="" class="iconos"></a>
                         </div>
                     </div>
                     <div class="tarjeta__container">
@@ -118,10 +118,10 @@
                 </li>
                 <li class="tarjeta">
                     <div class="container__imagen">
-                        <img src="/imagenes/consolas/consola-Mandoxbox.png" alt="imagen1">
+                        <img src="../../../imagenes/consolas/consola-Mandoxbox.png" alt="imagen1">
                         <div class="container__iconos">
-                            <a href="#"><img src="/imagenes/iconos/bote.png" alt="" class="iconos"></a>
-                            <a href="#"><img src="/imagenes/iconos/lapiz.png" alt="" class="iconos"></a>
+                            <a href="#"><img src="../../../imagenes/iconos/bote.png" alt="" class="iconos"></a>
+                            <a href="#"><img src="../../../imagenes/iconos/lapiz.png" alt="" class="iconos"></a>
                         </div>
                     </div>
                     <div class="tarjeta__container">
@@ -132,10 +132,10 @@
                 </li>
                 <li class="tarjeta">
                     <div class="container__imagen">
-                        <img src="/imagenes/consolas/consola-play.png" alt="imagen2">
+                        <img src="../../../imagenes/consolas/consola-play.png" alt="imagen2">
                         <div class="container__iconos">
-                            <a href="#"><img src="/imagenes/iconos/bote.png" alt="" class="iconos"></a>
-                            <a href="#"><img src="/imagenes/iconos/lapiz.png" alt="" class="iconos"></a>
+                            <a href="#"><img src="../../../imagenes/iconos/bote.png" alt="" class="iconos"></a>
+                            <a href="#"><img src="../../../imagenes/iconos/lapiz.png" alt="" class="iconos"></a>
                         </div>
                     </div>
                     <div>
@@ -146,10 +146,10 @@
                 </li>
                 <li class="tarjeta">
                     <div class="container__imagen">
-                        <img src="/imagenes/consolas/consola-nintendo.png" alt="imagen3">
+                        <img src="../../../imagenes/consolas/consola-nintendo.png" alt="imagen3">
                         <div class="container__iconos">
-                            <a href="#"><img src="/imagenes/iconos/bote.png" alt="" class="iconos"></a>
-                            <a href="#"><img src="/imagenes/iconos/lapiz.png" alt="" class="iconos"></a>
+                            <a href="#"><img src="../../../imagenes/iconos/bote.png" alt="" class="iconos"></a>
+                            <a href="#"><img src="../../../imagenes/iconos/lapiz.png" alt="" class="iconos"></a>
                         </div>
                     </div>
                     <div>
@@ -160,10 +160,10 @@
                 </li>
                 <li class="tarjeta">
                     <div class="container__imagen">
-                        <img src="/imagenes/consolas/consola-nintendoSwitch.png" alt="imagen4">
+                        <img src="../../../imagenes/consolas/consola-nintendoSwitch.png" alt="imagen4">
                         <div class="container__iconos">
-                            <a href="#"><img src="/imagenes/iconos/bote.png" alt="" class="iconos"></a>
-                            <a href="#"><img src="/imagenes/iconos/lapiz.png" alt="" class="iconos"></a>
+                            <a href="#"><img src="../../../imagenes/iconos/bote.png" alt="" class="iconos"></a>
+                            <a href="#"><img src="../../../imagenes/iconos/lapiz.png" alt="" class="iconos"></a>
                         </div>
                     </div>
                     <div>
@@ -174,10 +174,10 @@
                 </li>
                 <li class="tarjeta">
                     <div class="container__imagen">
-                        <img src="/imagenes/consolas/consola-xbox.png" alt="imagen5">
+                        <img src="../../../imagenes/consolas/consola-xbox.png" alt="imagen5">
                         <div class="container__iconos">
-                            <a href="#"><img src="/imagenes/iconos/bote.png" alt="" class="iconos"></a>
-                            <a href="#"><img src="/imagenes/iconos/lapiz.png" alt="" class="iconos"></a>
+                            <a href="#"><img src="../../../imagenes/iconos/bote.png" alt="" class="iconos"></a>
+                            <a href="#"><img src="../../../imagenes/iconos/lapiz.png" alt="" class="iconos"></a>
                         </div>
                     </div>
                     <div>
@@ -188,10 +188,10 @@
                 </li>
                 <li class="tarjeta">
                     <div class="container__imagen">
-                        <img src="/imagenes/consolas/consola-atari.png" alt="imagen6">
+                        <img src="../../../imagenes/consolas/consola-atari.png" alt="imagen6">
                         <div class="container__iconos">
-                            <a href="#"><img src="/imagenes/iconos/bote.png" alt="" class="iconos"></a>
-                            <a href="#"><img src="/imagenes/iconos/lapiz.png" alt="" class="iconos"></a>
+                            <a href="#"><img src="../../../imagenes/iconos/bote.png" alt="" class="iconos"></a>
+                            <a href="#"><img src="../../../imagenes/iconos/lapiz.png" alt="" class="iconos"></a>
                         </div>
                     </div>
                     <div>
@@ -202,10 +202,10 @@
                 </li>
                 <li class="tarjeta">
                     <div class="container__imagen">
-                        <img src="/imagenes/diversos/diverso-atari.png" alt="imagen1">
+                        <img src="../../../imagenes/diversos/diverso-atari.png" alt="imagen1">
                     <div class="container__iconos">
-                        <a href="#"><img src="/imagenes/iconos/bote.png" alt="" class="iconos"></a>
-                        <a href="#"><img src="/imagenes/iconos/lapiz.png" alt="" class="iconos"></a>
+                        <a href="#"><img src="../../../imagenes/iconos/bote.png" alt="" class="iconos"></a>
+                        <a href="#"><img src="../../../imagenes/iconos/lapiz.png" alt="" class="iconos"></a>
                     </div>
                     </div>
                     <div class="tarjeta__container">
@@ -216,10 +216,10 @@
                 </li>
                 <li class="tarjeta">
                     <div class="container__imagen">
-                        <img src="/imagenes/diversos/diverso nes.png" alt="imagen2">
+                        <img src="../../../imagenes/diversos/diverso nes.png" alt="imagen2">
                         <div class="container__iconos">
-                            <a href="#"><img src="/imagenes/iconos/bote.png" alt="" class="iconos"></a>
-                            <a href="#"><img src="/imagenes/iconos/lapiz.png" alt="" class="iconos"></a>
+                            <a href="#"><img src="../../../imagenes/iconos/bote.png" alt="" class="iconos"></a>
+                            <a href="#"><img src="../../../imagenes/iconos/lapiz.png" alt="" class="iconos"></a>
                         </div>
                     </div>
                     <div>
@@ -230,10 +230,10 @@
                 </li>
                 <li class="tarjeta">
                     <div class="container__imagen">
-                        <img src="/imagenes/diversos/diverso-sonic.png" alt="imagen3">
+                        <img src="../../../imagenes/diversos/diverso-sonic.png" alt="imagen3">
                         <div class="container__iconos">
-                            <a href="#"><img src="/imagenes/iconos/bote.png" alt="" class="iconos"></a>
-                            <a href="#"><img src="/imagenes/iconos/lapiz.png" alt="" class="iconos"></a>
+                            <a href="#"><img src="../../../imagenes/iconos/bote.png" alt="" class="iconos"></a>
+                            <a href="#"><img src="../../../imagenes/iconos/lapiz.png" alt="" class="iconos"></a>
                         </div>
                     </div>
                     <div>
@@ -244,10 +244,10 @@
                 </li>
                 <li class="tarjeta">
                     <div class="container__imagen">
-                        <img src="/imagenes/diversos/diverso-consola.png" alt="imagen4">
+                        <img src="../../../imagenes/diversos/diverso-consola.png" alt="imagen4">
                         <div class="container__iconos">
-                            <a href="#"><img src="/imagenes/iconos/bote.png" alt="" class="iconos"></a>
-                            <a href="#"><img src="/imagenes/iconos/lapiz.png" alt="" class="iconos"></a>
+                            <a href="#"><img src="../../../imagenes/iconos/bote.png" alt="" class="iconos"></a>
+                            <a href="#"><img src="../../../imagenes/iconos/lapiz.png" alt="" class="iconos"></a>
                         </div>
                     </div>
                     <div>
@@ -258,10 +258,10 @@
                 </li>
                 <li class="tarjeta">
                     <div class="container__imagen">
-                        <img src="/imagenes/diversos/diverso-vr.png" alt="imagen5">
+                        <img src="../../../imagenes/diversos/diverso-vr.png" alt="imagen5">
                         <div class="container__iconos">
-                            <a href="#"><img src="/imagenes/iconos/bote.png" alt="" class="iconos"></a>
-                            <a href="#"><img src="/imagenes/iconos/lapiz.png" alt="" class="iconos"></a>
+                            <a href="#"><img src="../../../imagenes/iconos/bote.png" alt="" class="iconos"></a>
+                            <a href="#"><img src="../../../imagenes/iconos/lapiz.png" alt="" class="iconos"></a>
                         </div>
                     </div>
                     <div>
@@ -272,10 +272,10 @@
                 </li>
                 <li class="tarjeta">
                     <div class="container__imagen">
-                        <img src="/imagenes/diversos/diverso-pikachu.png" alt="imagen6">
+                        <img src="../../../imagenes/diversos/diverso-pikachu.png" alt="imagen6">
                         <div class="container__iconos">
-                            <a href="#"><img src="/imagenes/iconos/bote.png" alt="" class="iconos"></a>
-                            <a href="#"><img src="/imagenes/iconos/lapiz.png" alt="" class="iconos"></a>
+                            <a href="#"><img src="../../../imagenes/iconos/bote.png" alt="" class="iconos"></a>
+                            <a href="#"><img src="../../../imagenes/iconos/lapiz.png" alt="" class="iconos"></a>
                         </div>
                     </div>
                     <div>
@@ -290,7 +290,7 @@
     <footer>
         <section class="footer__datos">
             <div class="logo">
-                <img src="/imagenes/Vector.png" alt="" srcset="" class="logo__imagen">
+                <img src="../../../imagenes/Vector.png" alt="" srcset="" class="logo__imagen">
                 <p class="logo__texto"><span>Alura</span>Geek</p>
             </div>
             <ul class="footer__lista">
