--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
             </div>
             <div class="barraBusqueda">
                 <input class="barraBusqueda__campo" type="search" name="" id="" placeholder="¿Qué deseas buscar?">
-                <input type="image" src="/imagenes/lupa.png" alt="lupa" >
+                <input type="image" src="./imagenes/lupa.png" alt="lupa" >
             </div>
-            <a href="/paginas/login/login.html" class="encabezado__boton">Login</a>
+            <a href="./paginas/login/login.html" class="encabezado__boton">Login</a>
             
         </section>
         <section class="banner">
@@ -42,12 +42,12 @@
             <div class="encabezado__seccion">
                 <h2 class="encabezado__seccion___titulo">Star Wars</h2> 
                 <a href="#" class="encabezado__seccion___enlace">ver todo
-                    <img  src="/imagenes/icono-flecha.png" alt="">
+                    <img  src="./imagenes/icono-flecha.png" alt="">
                 </a> 
             </div>
             <ul class="tarjetas">
                 <li class="tarjeta">
-                    <img src="/imagenes/starWars/img-stw1.png" alt="imagen1">
+                    <img src="./imagenes/starWars/img-stw1.png" alt="imagen1">
                     <div class="tarjeta__container">
                         <h3 class="tarjeta__container___titulo">poster star wars</h3>
                         <p class="tarjeta__container___precio">$ 8</p>
@@ -56,7 +56,7 @@
                 </li>
                 <li class="tarjeta">
                     <div class="tarjeta__imagen"></div>
-                    <img src="/imagenes/starWars/img-stw2.png" alt="imagen2">
+                    <img src="./imagenes/starWars/img-stw2.png" alt="imagen2">
                     <div class="tarjeta__container">
                         <h3 class="tarjeta__container___titulo">Figura baby yoda</h3>
                         <p class="tarjeta__container___precio">$ 10</p>
@@ -64,7 +64,7 @@
                     </div>
                 </li>
                 <li class="tarjeta">
-                    <img src="/imagenes/starWars/img-stw3.png" alt="imagen3">
+                    <img src="./imagenes/starWars/img-stw3.png" alt="imagen3">
                     <div class="tarjeta__container">
                         <h3 class="tarjeta__container___titulo">Poster stormtrooper</h3>
                         <p class="tarjeta__container___precio">$ 8</p>
@@ -72,7 +72,7 @@
                     </div>
                 </li>
                 <li class="tarjeta">
-                    <img src="/imagenes/starWars/img-stw4.png" alt="imagen4">
+                    <img src="./imagenes/starWars/img-stw4.png" alt="imagen4">
                     <div class="tarjeta__container">
                         <h3 class="tarjeta__container___titulo">Poster yoda</h3>
                         <p class="tarjeta__container___precio">$ 8</p>
@@ -80,7 +80,7 @@
                     </div>
                 </li>
                 <li class="tarjeta">
-                    <img src="/imagenes/starWars/img-stw5.png" alt="imagen5">
+                    <img src="./imagenes/starWars/img-stw5.png" alt="imagen5">
                     <div class="tarjeta__container">
                         <h3 class="tarjeta__container___titulo">Taza stormtrooper</h3>
                         <p class="tarjeta__container___precio">$ 5</p>
@@ -88,7 +88,7 @@
                     </div>
                 </li>
                 <li class="tarjeta">
-                    <img src="/imagenes/starWars/img-stw6.png" alt="imagen6">
+                    <img src="./imagenes/starWars/img-stw6.png" alt="imagen6">
                     <div class="tarjeta__container">
                         <h3 class="tarjeta__container___titulo">Figura darth vader</h3>
                         <p class="tarjeta__container___precio">$ 12</p>
@@ -101,12 +101,12 @@
             <div class="encabezado__seccion">
                 <h2 class="encabezado__seccion___titulo">Consolas</h2> 
                 <a href="#" class="encabezado__seccion___enlace">ver todo
-                    <img  src="/imagenes/icono-flecha.png" alt="icono">
+                    <img  src="./imagenes/icono-flecha.png" alt="icono">
                 </a> 
             </div>
             <ul class="tarjetas">
                 <li class="tarjeta">
-                    <img src="/imagenes/consolas/consola-Mandoxbox.png" alt="imagen1">
+                    <img src="./imagenes/consolas/consola-Mandoxbox.png" alt="imagen1">
                     <div class="tarjeta__container">
                         <h3 class="tarjeta__container___titulo">Mando xbox one</h3>
                         <p class="tarjeta__container___precio">$ 80</p>
@@ -114,7 +114,7 @@
                     </div>
                 </li>
                 <li class="tarjeta">
-                    <img src="/imagenes/consolas/consola-play.png" alt="imagen2">
+                    <img src="./imagenes/consolas/consola-play.png" alt="imagen2">
                     <div>
                         <h3 class="tarjeta__container___titulo">Play Station 5</h3>
                         <p class="tarjeta__container___precio">$ 800</p>
@@ -122,7 +122,7 @@
                     </div>
                 </li>
                 <li class="tarjeta">
-                    <img src="/imagenes/consolas/consola-nintendo.png" alt="imagen3">
+                    <img src="./imagenes/consolas/consola-nintendo.png" alt="imagen3">
                     <div>
                         <h3 class="tarjeta__container___titulo">consola NES</h3>
                         <p class="tarjeta__container___precio">$ 200</p>
@@ -130,7 +130,7 @@
                     </div>
                 </li>
                 <li class="tarjeta">
-                    <img src="/imagenes/consolas/consola-nintendoSwitch.png" alt="imagen4">
+                    <img src="./imagenes/consolas/consola-nintendoSwitch.png" alt="imagen4">
                     <div>
                         <h3 class="tarjeta__container___titulo">consola nintendo switch</h3>
                         <p class="tarjeta__container___precio">$ 400</p>
@@ -138,7 +138,7 @@
                     </div>
                 </li>
                 <li class="tarjeta">
-                    <img src="/imagenes/consolas/consola-xbox.png" alt="imagen5">
+                    <img src="./imagenes/consolas/consola-xbox.png" alt="imagen5">
                     <div>
                         <h3 class="tarjeta__container___titulo">Xbox x</h3>
                         <p class="tarjeta__container___precio">$ 800</p>
@@ -146,7 +146,7 @@
                     </div>
                 </li>
                 <li class="tarjeta">
-                    <img src="/imagenes/consolas/consola-atari.png" alt="imagen6">
+                    <img src="./imagenes/consolas/consola-atari.png" alt="imagen6">
                     <div>
                         <h3 class="tarjeta__container___titulo">Game Boy</h3>
                         <p class="tarjeta__container___precio">$ 125</p>
@@ -159,12 +159,12 @@
             <div class="encabezado__seccion">
                 <h2 class="encabezado__seccion___titulo">Diversos</h2> 
                 <a href="#" class="encabezado__seccion___enlace">ver todo
-                    <img  src="/imagenes/icono-flecha.png" alt="icono">
+                    <img  src="./imagenes/icono-flecha.png" alt="icono">
                 </a> 
             </div>
             <ul class="tarjetas">
                 <li class="tarjeta">
-                    <img src="/imagenes/diversos/diverso-atari.png" alt="imagen1">
+                    <img src="./imagenes/diversos/diverso-atari.png" alt="imagen1">
                     <div class="tarjeta__container">
                         <h3 class="tarjeta__container___titulo">Camiseta Atari</h3>
                         <p class="tarjeta__container___precio">$ 25</p>
@@ -172,7 +172,7 @@
                     </div>
                 </li>
                 <li class="tarjeta">
-                    <img src="/imagenes/diversos/diverso nes.png" alt="imagen2">
+                    <img src="./imagenes/diversos/diverso nes.png" alt="imagen2">
                     <div>
                         <h3 class="tarjeta__container___titulo">Camiseta NES</h3>
                         <p class="tarjeta__container___precio">$ 25</p>
@@ -180,7 +180,7 @@
                     </div>
                 </li>
                 <li class="tarjeta">
-                    <img src="/imagenes/diversos/diverso-sonic.png" alt="imagen3">
+                    <img src="./imagenes/diversos/diverso-sonic.png" alt="imagen3">
                     <div>
                         <h3 class="tarjeta__container___titulo">Figura sonic</h3>
                         <p class="tarjeta__container___precio">$ 10</p>
@@ -188,7 +188,7 @@
                     </div>
                 </li>
                 <li class="tarjeta">
-                    <img src="/imagenes/diversos/diverso-consola.png" alt="imagen4">
+                    <img src="./imagenes/diversos/diverso-consola.png" alt="imagen4">
                     <div>
                         <h3 class="tarjeta__container___titulo">consola</h3>
                         <p class="tarjeta__container___precio">$ 90</p>
@@ -196,7 +196,7 @@
                     </div>
                 </li>
                 <li class="tarjeta">
-                    <img src="/imagenes/diversos/diverso-vr.png" alt="imagen5">
+                    <img src="./imagenes/diversos/diverso-vr.png" alt="imagen5">
                     <div>
                         <h3 class="tarjeta__container___titulo">Gafas VR</h3>
                         <p class="tarjeta__container___precio">$ 100</p>
@@ -204,7 +204,7 @@
                     </div>
                 </li>
                 <li class="tarjeta">
-                    <img src="/imagenes/diversos/diverso-pikachu.png" alt="imagen6">
+                    <img src="./imagenes/diversos/diverso-pikachu.png" alt="imagen6">
                     <div>
                         <h3 class="tarjeta__container___titulo">Traje pikachu</h3>
                         <p class="tarjeta__container___precio">$ 30</p>
@@ -217,7 +217,7 @@
     <footer>
         <section class="footer__datos">
             <div class="logo">
-                <img src="/imagenes/Vector.png" alt="" srcset="" class="logo__imagen">
+                <img src="./imagenes/Vector.png" alt="" srcset="" class="logo__imagen">
                 <p class="logo__texto"><span>Alura</span>Geek</p>
             </div>
             <ul class="footer__lista">
