--- a/paginas/login/login.html
+++ b/paginas/login/login.html
@@ -5,27 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link rel="stylesheet" href="/reset.css">
-    <link rel="stylesheet" href="/estilosPrincipales.css">
-    <link rel="stylesheet" href="/estilos/cabecera.css">
-    <link rel="stylesheet" href="estilosLogin.css">
-    <link rel="stylesheet" href="/estilos/piePagina.css">
+    <link rel="stylesheet" href="../../reset.css">
+    <link rel="stylesheet" href="../../estilosPrincipales.css">
+    <link rel="stylesheet" href="../../estilos/cabecera.css ">
+    <link rel="stylesheet" href="./estilosLogin.css ">
+    <link rel="stylesheet" href="../../estilos/piePagina.css">
 </head>
 <body>
     <header>
         <section class="encabezado">
             <div class="logo">
-                <img src="/imagenes/Vector.png" alt="" srcset="" class="logo__imagen">
+                <img src="../../imagenes/Vector.png" alt="" srcset="" class="logo__imagen">
                 <p class="logo__texto"><span>Alura</span>Geek</p>
             </div>
             <div class="barraBusqueda">
                 <input class="barraBusqueda__campo" type="search" name="" id="" placeholder="¿Qué deseas buscar?">
-                <input type="image" src="/imagenes/lupa.png" alt="lupa" >
+                <input type="image" src="../../imagenes/lupa.png" alt="lupa" >
             </div>
         </section>
     </header>
     <main>
-        <form action="/paginas/admin/productos/productos.html" class="formulario__login">
+        <form action="../../paginas/admin/productos/productos.html" class="formulario__login">
             <fieldset class="formulario__container">
                 <legend class="formulario__container__titulo">Iniciar Sesión</legend>
                 <input class="campos" type="email"  placeholder="Escriba su correo electrónico" required>
@@ -37,7 +37,7 @@
     <footer>
         <section class="footer__datos">
             <div class="logo">
-                <img src="/imagenes/Vector.png" alt="" srcset="" class="logo__imagen">
+                <img src="../../imagenes/Vector.png" alt="" srcset="" class="logo__imagen">
                 <p class="logo__texto"><span>Alura</span>Geek</p>
             </div>
             <ul class="footer__lista">
